--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Book Finder</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
   <body>
+    <!-- header section start-->
+
+  <header class="header">
+    <div class="header-1">
+      
+      <a href="#" class="logo"> <i class="fas fa-book"> Book Finder</i></a>
+      
+      <div class="icons">
+        <a href="#" class="fas fa-heart"></a>
+        <a id="login-btn" href="login.html" class="fas fa-user"></a>
+      </div>
+    </div>
+  </header>
+
+    <!-- header section end-->
+    <h1 id="greatings" onload="greating()"></h1>
     <div class="container">
       <div id="title" class="center">
         <h1 id="header" class="text-center mt-5">Book Finder</h1>
         <div class="row">
           <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
             <input id="search-box" type="text" class="form-control" placeholder="Search Books!...">
-            <button id="search" class="btn btn-primary" onclick="">Search</button>
+            <button id="search" class="btn btn-success" onclick="">Search</button>
         </div>
         </div>
       </div>
@@ -27,13 +45,14 @@
         </div>
       </div>
     </div>
+    <div>
 
+    </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
     <script src="js/index.js"></script>
   </body>
 </html>
